--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -3,6 +3,7 @@ import init.holiday.usb.rc
 on early-init
     mkdir /storage 0050 system sdcard_r
     mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/usbdisk 0775 system system
     mkdir /storage/sdcard1 0000 system system
 
     # for backwards compatibility
@@ -64,6 +65,9 @@ on emmc-fs
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
+    # Force loading of modem and Q6 images
+    # uncomment if nessasary: write /dev/smd_pkt_loopback 1
+
     # Bluetooth Permissions
     chown bluetooth bluetooth /dev/ttyHS0
     chmod 0660 /dev/ttyHS0
@@ -79,6 +83,13 @@ on emmc-fs
     symlink /system/vendor/firmware/fw_bcmdhd.bin /vendor/firmware/fw_bcmdhd.bin
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
+
+    # TEMP HACK to fix BT firmware symlink issue
+    symlink /system/vendor/lib /vendor/lib
+
+    # audio effects symlink
+    symlink /system/vendor/etc/audio_effects.conf /vendor/etc/audio_effects.conf
+    symlink /system/vendor/etc/audio_policy.conf /vendor/etc/audio_policy.conf
 
 on post-fs-data
     # double check the perms and set owner
@@ -318,10 +329,10 @@ service modem /system/xbin/wireless_modem
     group system radio
     disabled
 
-service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
-    class main
-    user root
-    disabled
+#service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
+#    class main
+#    user root
+#    disabled
 
 service mpld /system/bin/mpld
     class main
