--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -15,7 +15,6 @@ on early-init
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
 
-on emmc-fs
     mkdir /devlog 0700 root root
 
     # msm8660: firmware
@@ -28,7 +27,13 @@ on emmc-fs
     mkdir /vendor/firmware/misc_mdm 0771 system system
 
     # mount the whole thing
-    mount_all fstab.holiday
+    # mount_all fstab.holiday
+
+    wait /dev/block/mmcblk0p17
+    wait /dev/block/mmcblk0p21
+    mount vfat /dev/block/mmcblk0p17 /vendor/firmware/misc ro shortname=lower
+    mount vfat /dev/block/mmcblk0p21 /vendor/firmware/adsp ro shortname=lower
+    mount vfat /dev/block/mmcblk0p18 /vendor/firmware/misc_mdm ro shortname=lower
 
     chown radio diag /dev/block/mmcblk0p16
     chmod 0460 /dev/block/mmcblk0p16
@@ -68,14 +73,12 @@ on emmc-fs
     # Force loading of modem and Q6 images
     # uncomment if nessasary: write /dev/smd_pkt_loopback 1
 
-    # Bluetooth Permissions
-    chown bluetooth bluetooth /dev/ttyHS0
-    chmod 0660 /dev/ttyHS0
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
-    setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
+on init
+    mkdir /devlog 0700 root root
+
+on fs
+    mount_all /fstab.holiday
+    setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
 
     # Wifi Firmware
     symlink /system/vendor/firmware/bcm4330.hcd /vendor/firmware/bcm4330.hcd
@@ -99,9 +102,22 @@ on post-fs-data
     # Set indication that we have finished previous actions
     setprop vold.post_fs_done 1
 
+on boot
+
     wait /dev/ttyHSL1
+    mount debugfs /sys/kernel/debug /sys/kernel/debug
     mkdir /data/qcks 0770 system system
     exec /system/bin/logwrapper /system/bin/htc_ext4_fsck
+
+    # Chown polling nodes as needed from UI running on system server
+    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
+    chown system system /sys/devices/platform/msm_sdcc.1/polling
+    chown system system /sys/devices/platform/msm_sdcc.2/polling
+    chown system system /sys/devices/platform/msm_sdcc.3/polling
+    chown system system /sys/devices/platform/msm_sdcc.4/polling
 
     mkdir /data/radio 0770 radio radio
     chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
@@ -118,18 +134,14 @@ on post-fs-data
     chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     chown dhcp dhcp /data/misc/dhcp
 
-    mkdir /data/d 0777 system system
-    mount debugfs /data/d /data/d
+   # mkdir /data/d 0777 system system
+   # mount debugfs /data/d /data/d
 
-    # allow system to modify ksm control files
-    chown root system /sys/kernel/mm/ksm/pages_to_scan
-    chmod 0664 /sys/kernel/mm/ksm/pages_to_scan
-    chown root system /sys/kernel/mm/ksm/sleep_millisecs
-    chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
-    chown root system /sys/kernel/mm/ksm/run
-    chmod 0664 /sys/kernel/mm/ksm/run
-    write /sys/kernel/mm/ksm/sleep_millisecs 1500
-    write /sys/kernel/mm/ksm/pages_to_scan 256
+    # audio
+    mkdir /data/audio 2770 media audio
+
+    # radio
+    mkdir /data/radio 2770 radio radio
 
     # liblights
     chown system system /sys/class/leds/green/brightness
@@ -188,6 +200,17 @@ on post-fs-data
     chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
     chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
 
+    # remove write permissions to video nodes
+    chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
+    chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
+    chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
+
+    # change owner and group for media server and surfaceflinger
+    chown system system /sys/devices/virtual/graphics/fb1/format_3d
+
+    chown system system /sys/devices/platform/panel_3d/3D_mode
+    chmod 0664 /sys/devices/platform/panel_3d/3D_mode
+
     # for Optical sensors
     chown system system /sys/class/optical_sensors/lightsensor/ls_adc
     chown system system /sys/class/optical_sensors/lightsensor/ls_auto
@@ -198,7 +221,7 @@ on post-fs-data
     chown system system /sys/class/optical_sensors/proximity/ps_test_mode
 
     # Set SUID bit for iproute2 ip tool
-    chmod 4755 /system/bin/ip
+   # chmod 4755 /system/bin/ip
 
     # port-bridge
     chmod 0660 /dev/smd0
@@ -216,12 +239,12 @@ on post-fs-data
     chown system system /dev/mpuirq
     chown system system /dev/timerirq
 
-    symlink /mnt/sdcard/ext_sd /sdcard2
+   # symlink /mnt/sdcard/ext_sd /sdcard2
 
     # Overwrite framework low memory killer setting
-    write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
-    write /sys/module/lowmemorykiller/parameters/minfile 2048,3072,4096,6144,8192,12288
-    write /sys/module/lowmemorykiller/parameters/check_filepages 1
+   # write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
+   # write /sys/module/lowmemorykiller/parameters/minfile 2048,3072,4096,6144,8192,12288
+   # write /sys/module/lowmemorykiller/parameters/check_filepages 1
 
 # set diag permissions
     chown radio radio /dev/diag
@@ -235,33 +258,9 @@ on post-fs-data
     chmod 0660 /dev/diag_arm9
     chmod 0660 /dev/btdiag
 
-    # allow interfaces to get v6 address when tethering is enabled
-    write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet7/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
-
-    setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
-    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
-    setprop net.tcp.buffersize.hsdpa   4096,174760,1572864,4096,16384,110208
-    setprop net.tcp.buffersize.umts    4096,174760,1572864,4096,16384,110208
-    setprop net.tcp.buffersize.edge    4096,174760,1572864,4096,16384,35040
-    setprop net.tcp.buffersize.gprs    4096,174760,1572864,4096,8760,11680
-    setprop net.tcp.buffersize.lte     4096,221184,3461120,4096,221184,3461120
-    setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
-    setprop net.tcp.buffersize.wimax   4096,221184,524288,4096,16384,110208
+    # sync fs
+    chown system /sys/devices/platform/rs300000a7.65536/force_sync
+    chown system /sys/devices/platform/rs300000a7.65536/sync_sts
 
 # Services start here
 
@@ -270,11 +269,6 @@ on post-fs-data
 #     disabled
 #     oneshot
 
-# bugreport is triggered by the KEY_VOL-UP and KEY_VOL-DOWN keycodes
-service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
-    disabled
-    oneshot
-    keycodes 114 115
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
@@ -369,8 +363,8 @@ service qmiproxy /system/bin/qmiproxy
     disabled
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 NULL NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
+    class core
     user root
-    disabled
 
 service ril-daemon /system/bin/rild
     class main
@@ -397,21 +391,12 @@ service zchgd_onmode /system/bin/zchgd -onmode
     oneshot
 
 on property:init.svc.bootanim=stopped
-    start mpdecision
-
-on property:ro.emmc=1
-    start rmt_storage
-
-on property:ro.use_data_netmgrd=false
-    stop netmgrd
-
-on property:service.modem.enable=1
-    start modem
-
-on property:service.modem.enable=0
-    stop modem
+    start qcom-post-boot
 
 on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
+
+on property:sys.radio.shutdown=true
+    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
