ramdisk: base ramdisk off of working cm10 img with only the absolutely required changes
Change-Id: I239476f879e8662eb54792c030c5970b62bf13dc

--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -65,6 +65,9 @@ on emmc-fs
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
+    # Force loading of modem and Q6 images
+    # uncomment if nessasary: write /dev/smd_pkt_loopback 1
+
     # Bluetooth Permissions
     chown bluetooth bluetooth /dev/ttyHS0
     chmod 0660 /dev/ttyHS0
@@ -80,6 +83,13 @@ on emmc-fs
     symlink /system/vendor/firmware/fw_bcmdhd.bin /vendor/firmware/fw_bcmdhd.bin
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
+
+    # TEMP HACK to fix BT firmware symlink issue
+    symlink /system/vendor/lib /vendor/lib
+
+    # audio effects symlink
+    symlink /system/vendor/etc/audio_effects.conf /vendor/etc/audio_effects.conf
+    symlink /system/vendor/etc/audio_policy.conf /vendor/etc/audio_policy.conf
 
 on post-fs-data
     # double check the perms and set owner
@@ -111,6 +121,15 @@ on post-fs-data
     mkdir /data/d 0777 system system
     mount debugfs /data/d /data/d
 
+    # allow system to modify ksm control files
+    chown root system /sys/kernel/mm/ksm/pages_to_scan
+    chmod 0664 /sys/kernel/mm/ksm/pages_to_scan
+    chown root system /sys/kernel/mm/ksm/sleep_millisecs
+    chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
+    chown root system /sys/kernel/mm/ksm/run
+    chmod 0664 /sys/kernel/mm/ksm/run
+    write /sys/kernel/mm/ksm/sleep_millisecs 1500
+    write /sys/kernel/mm/ksm/pages_to_scan 256
 
     # liblights
     chown system system /sys/class/leds/green/brightness
@@ -169,16 +188,6 @@ on post-fs-data
     chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
     chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
 
-    # remove write permissions to video nodes
-    chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
-    chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
-    chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
-
-    # change owner and group for media server and surfaceflinger
-    chown system system /sys/devices/virtual/graphics/fb1/format_3d
-
-    chown system system /sys/devices/platform/panel_3d/3D_mode
-    chmod 0664 /sys/devices/platform/panel_3d/3D_mode
     # for Optical sensors
     chown system system /sys/class/optical_sensors/lightsensor/ls_adc
     chown system system /sys/class/optical_sensors/lightsensor/ls_auto
@@ -210,9 +219,9 @@ on post-fs-data
     symlink /mnt/sdcard/ext_sd /sdcard2
 
     # Overwrite framework low memory killer setting
-   # write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
-   # write /sys/module/lowmemorykiller/parameters/minfile 2048,3072,4096,6144,8192,12288
-   # write /sys/module/lowmemorykiller/parameters/check_filepages 1
+    write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
+    write /sys/module/lowmemorykiller/parameters/minfile 2048,3072,4096,6144,8192,12288
+    write /sys/module/lowmemorykiller/parameters/check_filepages 1
 
 # set diag permissions
     chown radio radio /dev/diag
@@ -320,10 +329,10 @@ service modem /system/xbin/wireless_modem
     group system radio
     disabled
 
-service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
-    class main
-    user root
-    disabled
+#service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
+#    class main
+#    user root
+#    disabled
 
 service mpld /system/bin/mpld
     class main
