--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -81,6 +81,13 @@ on emmc-fs
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
 
+    # TEMP HACK 
+    symlink /system/vendor/lib /vendor/lib
+
+    mkdir /vendor/etc 0771 system system
+    symlink /system/vendor/etc/audio_effects.conf /vendor/etc/audio_effects.conf
+    symlink /system/vendor/etc/audio_policy.conf /vendor/etc/audio_policy.conf
+
 on post-fs-data
     # double check the perms and set owner
     chown root root /devlog
