--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -5,7 +5,6 @@ on early-init
     mkdir /storage/sdcard0 0000 system system
     mkdir /storage/usbdisk 0775 system system
     mkdir /storage/sdcard1 0000 system system
-
     # for backwards compatibility
     symlink /storage/sdcard0 /mnt/sdcard
     symlink /storage/sdcard0 /sdcard
@@ -15,23 +14,17 @@ on early-init
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
 
-on emmc-fs
-    mkdir /devlog 0700 root root
-
-    # msm8660: firmware
+    # load msm8660 firmware so things have time to initialize
     rm /vendor
-    mkdir /vendor                   0771 system system
-    mkdir /vendor/etc               0771 system system
-    mkdir /vendor/firmware          0771 system system
-    mkdir /vendor/firmware/misc     0771 system system
-    mkdir /vendor/firmware/adsp     0771 system system
-    mkdir /vendor/firmware/misc_mdm 0771 system system
+    mkdir /vendor 0771 system system
+    mkdir /vendor/firmware 0771 system system
+    mkdir /vendor/firmware/misc 0771 system system
+    mkdir /vendor/firmware/adsp 0771 system system
 
-    # mount the whole thing
-    mount_all fstab.holiday
-
-    chown radio diag /dev/block/mmcblk0p16
-    chmod 0460 /dev/block/mmcblk0p16
+    wait /dev/block/mmcblk0p17
+    wait /dev/block/mmcblk0p21
+    mount vfat /dev/block/mmcblk0p17 /vendor/firmware/misc ro shortname=lower
+    mount vfat /dev/block/mmcblk0p21 /vendor/firmware/adsp ro shortname=lower
 
     symlink /vendor/firmware/adsp/q6.b07 /vendor/firmware/q6.b07
     symlink /vendor/firmware/adsp/q6.b06 /vendor/firmware/q6.b06
@@ -65,21 +58,24 @@ on emmc-fs
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
-    # Bluetooth Permissions
-    chown bluetooth bluetooth /dev/ttyHS0
-    chmod 0660 /dev/ttyHS0
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
-    setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
+    # Force loading of modem and Q6 images
+    write /dev/smd_pkt_loopback 1
 
-    # Wifi Firmware
-    symlink /system/vendor/firmware/bcm4330.hcd /vendor/firmware/bcm4330.hcd
+
+on init
+    mkdir /devlog 0700 root root
+
+on fs
+    # mount all mmc partitions
+    mount_all /fstab.holiday
+
+    setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
+
     symlink /system/vendor/firmware/bcm4329.hcd /vendor/firmware/bcm4329.hcd
     symlink /system/vendor/firmware/fw_bcmdhd.bin /vendor/firmware/fw_bcmdhd.bin
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
+    symlink /system/vendor/firmware/bcm4330.hcd /vendor/firmware/bcm4330.hcd
 
     # TEMP HACK 
     symlink /system/vendor/lib /vendor/lib
@@ -93,31 +89,50 @@ on post-fs-data
     chown root root /devlog
     chmod 0700 /devlog
 
-    # Set indication that we have finished previous actions
-    setprop vold.post_fs_done 1
+    # Set indication (checked by vold) that we have finished this action
+    setprop vold.post_fs_data_done 1
 
-    wait /dev/ttyHSL1
-    mkdir /data/qcks 0770 system system
-    exec /system/bin/logwrapper /system/bin/htc_ext4_fsck
+on boot
+    # for systrace
+    mount debugfs /sys/kernel/debug /sys/kernel/debug
 
-    mkdir /data/radio 0770 radio radio
-    chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
-    chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
+    # Chown polling nodes as needed from UI running on system server
+    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
+    chown system system /sys/devices/platform/msm_sdcc.1/polling
+    chown system system /sys/devices/platform/msm_sdcc.2/polling
+    chown system system /sys/devices/platform/msm_sdcc.3/polling
+    chown system system /sys/devices/platform/msm_sdcc.4/polling
 
-    # audio
-    mkdir /data/audio 0775 media audio
+    # bluetooth power up/down interface
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
+    chmod 0660                /sys/class/rfkill/rfkill0/state
+
+    # bluetooth MAC address programming
+    chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
+    setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
+
+    # for modem link
+    chown system system /sys/module/serial/parameters/modem_enabled
 
     # wifi
     mkdir /data/misc 1771 system misc
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     chown dhcp dhcp /data/misc/dhcp
 
-    mkdir /data/d 0777 system system
-    mount debugfs /data/d /data/d
+    # symlink for HDMI
+    symlink /dev/graphics/fb1 /dev/graphics/hdmi
 
+    # audio
+    mkdir /data/audio 2770 media audio
+
+    # radio
+    mkdir /data/radio 2770 radio radio
 
     # liblights
     chown system system /sys/class/leds/green/brightness
@@ -162,17 +177,31 @@ on post-fs-data
     chown system system /sys/devices/virtual/htc_accessory/fm/flag
     chown system system /sys/devices/virtual/htc_accessory/tty/flag
 
-    # for modem link
-    chown system system /sys/module/serial/parameters/modem_enabled
-    chown system system /dev/ttyHSUSB0
-    chown system system /dev/ttySA0
-    chown system system /dev/smd9
-
     # flashlight
     chown system camera /sys/class/leds/flashlight/brightness
-    chmod 0666          /sys/class/leds/flashlight/brightness
+    chmod 0660          /sys/class/leds/flashlight/brightness
 
-    # for Flip to speaker
+    # for optical sensors
+    chown system system /sys/class/optical_sensors/lightsensor/ls_adc
+    chown system system /sys/class/optical_sensors/lightsensor/ls_auto
+    chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
+    chown system radio /sys/class/optical_sensors/proximity/ps_adc
+    chown system system /sys/class/optical_sensors/proximity/ps_kadc
+    chown system system /sys/class/optical_sensors/proximity/ps_led
+    chown system system /sys/class/optical_sensors/proximity/ps_test_mode
+
+    # for charging function
+    chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
+    chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
+
+    # to enable low charge current in voice call
+    chown radio radio /sys/class/power_supply/battery/charger_control
+    chmod 0660 /sys/class/power_supply/battery/charger_control
+
+    # for slate charging timer
+    chown radio /sys/class/power_supply/battery/charger_timer
+
+    # for flip to speaker
     chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
     chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
 
@@ -186,122 +215,21 @@ on post-fs-data
 
     chown system system /sys/devices/platform/panel_3d/3D_mode
     chmod 0664 /sys/devices/platform/panel_3d/3D_mode
-    # for Optical sensors
-    chown system system /sys/class/optical_sensors/lightsensor/ls_adc
-    chown system system /sys/class/optical_sensors/lightsensor/ls_auto
-    chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
-    chown system radio /sys/class/optical_sensors/proximity/ps_adc
-    chown system system /sys/class/optical_sensors/proximity/ps_kadc
-    chown system system /sys/class/optical_sensors/proximity/ps_led
-    chown system system /sys/class/optical_sensors/proximity/ps_test_mode
 
-    # Set SUID bit for iproute2 ip tool
-    chmod 4755 /system/bin/ip
-
-    # port-bridge
-    chmod 0660 /dev/smd0
-    chown system system /dev/smd0
-
-    # for charging function
-    chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
-    chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
-
-    # for Invense MPU3050
-    chmod 0664 /dev/mpu
-    chmod 0664 /dev/mpuirq
-    chmod 0664 /dev/timerirq
-    chown system system /dev/mpu
-    chown system system /dev/mpuirq
-    chown system system /dev/timerirq
-
-    symlink /mnt/sdcard/ext_sd /sdcard2
-
-    # Overwrite framework low memory killer setting
-   # write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
-   # write /sys/module/lowmemorykiller/parameters/minfile 2048,3072,4096,6144,8192,12288
-   # write /sys/module/lowmemorykiller/parameters/check_filepages 1
-
-# set diag permissions
-    chown radio radio /dev/diag
-    chown radio radio /dev/diag_mdm
-    chown radio radio /dev/htcdiag
-    chown radio radio /dev/diag_arm9
-    chown radio radio /dev/btdiag
-    chmod 0660 /dev/diag
-    chmod 0660 /dev/diag_mdm
-    chmod 0660 /dev/htcdiag
-    chmod 0660 /dev/diag_arm9
-    chmod 0660 /dev/btdiag
-
-    # allow interfaces to get v6 address when tethering is enabled
-    write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet7/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
-
-    setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
-    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
-    setprop net.tcp.buffersize.hsdpa   4096,174760,1572864,4096,16384,110208
-    setprop net.tcp.buffersize.umts    4096,174760,1572864,4096,16384,110208
-    setprop net.tcp.buffersize.edge    4096,174760,1572864,4096,16384,35040
-    setprop net.tcp.buffersize.gprs    4096,174760,1572864,4096,8760,11680
-    setprop net.tcp.buffersize.lte     4096,221184,3461120,4096,221184,3461120
-    setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
-    setprop net.tcp.buffersize.wimax   4096,221184,524288,4096,16384,110208
+    # sync fs
+    chown system /sys/devices/platform/rs300000a7.65536/force_sync
+    chown system /sys/devices/platform/rs300000a7.65536/sync_sts
 
 # Services start here
-
-# for USB internet sharing
-# service udhcpd /system/bin/udhcpd
-#     disabled
-#     oneshot
-
-# bugreport is triggered by the KEY_VOL-UP and KEY_VOL-DOWN keycodes
-service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
-    disabled
-    oneshot
-    keycodes 114 115
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
 
-service dhcpcd_p2p /system/bin/dhcpcd -aABKL
+service hdmid /system/bin/hdmid
     class main
-    disabled
-    oneshot
-
-service dmagent /system/bin/dmagent -N
-    socket dmagent stream 660 root radio
-    user root
-    group radio cache inet misc
-
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --no2bytes \
-        --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download \
-        --patchram /system/vendor/firmware/bcm4330.hcd \
-        --scopcm=0,0,0,0,0,0,0,3,3,0 /dev/ttyHS0
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
-    socket wpa_wlan0 dgram 660 wifi wifi
-    oneshot
+    socket hdmid stream 0660 root system graphics
     disabled
 
 service htcbatt /system/bin/htcbatt
@@ -313,58 +241,38 @@ service iprenew_wlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-service iprenew_p2p /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-service kickstart /system/bin/qcks l
-    class main
-    oneshot
-
 service modem /system/xbin/wireless_modem
     user system
     group system radio
     disabled
-
-service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
-    class main
-    user root
-    disabled
-
-service mpld /system/bin/mpld
-    class main
-    user system
-    oneshot
+# service mpdecision /system/bin/mpdecision --no_sleep --avg_comp --single_core_while_panel_off
+  # user root
+   # disabled
 
 service netmgrd /system/bin/netmgrd
     class main
 
-service netsharing_on /system/bin/netsharing net on
-    class main
+service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
+    user root
+    group wifi inet
+    socket wpa_wlan0 dgram 0660 wifi wifi
     disabled
     oneshot
 
-service netsharing_off /system/bin/netsharing net off
+service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     class main
+    user root
     disabled
-    oneshot
 
-service netsharing_pass /system/bin/netsharing net_pass on
-    class main
-    disabled
-    oneshot
+#service qcom-sh /system/bin/sh /init.qcom.sh
+#    class core
+#    user root
+#    oneshot
 
 service qmuxd /system/bin/qmuxd
     class main
     user radio
-    group system radio inet
-
-service qmiproxy /system/bin/qmiproxy
-    class main
-    user radio
-    group radio
-    disabled
+    group radio audio bluetooth gps
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 NULL NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
     class core
@@ -380,36 +288,21 @@ service ril-daemon /system/bin/rild
 service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
     user root
     group wifi inet
+    class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
 
-service zchgd_offmode /system/bin/zchgd -pseudooffmode
-    class main
-    user root
-    disabled
-
-service zchgd_onmode /system/bin/zchgd -onmode
-    class main
-    user root
-    oneshot
-
 on property:init.svc.bootanim=stopped
-    start mpdecision
+    start qcom-post-boot
 
-on property:ro.emmc=1
-    start rmt_storage
-
-on property:ro.use_data_netmgrd=false
-    stop netmgrd
-
-on property:service.modem.enable=1
-    start modem
-
-on property:service.modem.enable=0
-    stop modem
+on property:ro.hdmi.enable=true
+    start hdmid
 
 on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
+
+on property:sys.radio.shutdown=true
+    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
