--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -83,6 +83,9 @@ on emmc-fs
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
 
+    # TEMP HACK 
+    symlink /system/vendor/lib /vendor/lib
+
 on post-fs-data
     # double check the perms and set owner
     chown root root /devlog
