--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -364,8 +364,8 @@ service qmiproxy /system/bin/qmiproxy
     disabled
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 NULL NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
+    class core
     user root
-    disabled
 
 service ril-daemon /system/bin/rild
     class main
@@ -377,6 +377,7 @@ service ril-daemon /system/bin/rild
 service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
     user root
     group wifi inet
+    class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
