--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -11,8 +11,8 @@ on early-init
     symlink /storage/sdcard0 /mnt/sdcard
     symlink /storage/sdcard1 /external_sd
     symlink /storage/sdcard1 /mnt/external_sd
-    symlink /storage/usbdisk /usbdisk
-    symlink /storage/usbdisk /mnt/usbdisk
+    #symlink /storage/usbdisk /usbdisk
+    #symlink /storage/usbdisk /mnt/usbdisk
 
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
@@ -77,11 +77,10 @@ on emmc-fs
     setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
 
     # Wifi Firmware
-    symlink /system/vendor/firmware/bcm4330.hcd /vendor/firmware/bcm4330.hcd
-    symlink /system/vendor/firmware/bcm4329.hcd /vendor/firmware/bcm4329.hcd
     symlink /system/vendor/firmware/fw_bcmdhd.bin /vendor/firmware/fw_bcmdhd.bin
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
+    symlink /system/vendor/firmware/bcm4329.hcd /vendor/firmware/bcm4329.hcd
 
     # TEMP HACK 
     symlink /system/vendor/lib /vendor/lib
@@ -110,7 +109,7 @@ on post-fs-data
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
+    #chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     chown dhcp dhcp /data/misc/dhcp
 
     mkdir /data/d 0777 system system
@@ -211,7 +210,7 @@ on post-fs-data
     chown system system /dev/mpuirq
     chown system system /dev/timerirq
 
-    symlink /mnt/sdcard/ext_sd /sdcard2
+    symlink /mnt/sdcard/ext_sd /sdcard1
 
     # Overwrite framework low memory killer setting
     write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
@@ -286,15 +285,15 @@ service dmagent /system/bin/dmagent -N
     user root
     group radio cache inet misc
 
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --no2bytes \
-        --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download \
-        --patchram /system/vendor/firmware/bcm4330.hcd \
-        --scopcm=0,0,0,0,0,0,0,3,3,0 /dev/ttyHS0
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
+#service hciattach /system/bin/brcm_patchram_plus --enable_hci --no2bytes \
+#        --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download \
+#        --patchram /system/vendor/firmware/bcm4330.hcd \
+#        --scopcm=0,0,0,0,0,0,0,3,3,0 /dev/ttyHS0
+#    class main
+#    user bluetooth
+#    group bluetooth net_bt_admin
+#    disabled
+#    oneshot
 
 service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     socket wpa_wlan0 dgram 660 wifi wifi
@@ -363,7 +362,7 @@ service qmiproxy /system/bin/qmiproxy
     group radio
     disabled
 
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 NULL NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
+service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
     class core
     user root
 
