--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -11,8 +11,8 @@ on early-init
     symlink /storage/sdcard0 /mnt/sdcard
     symlink /storage/sdcard1 /external_sd
     symlink /storage/sdcard1 /mnt/external_sd
-    #symlink /storage/usbdisk /usbdisk
-    #symlink /storage/usbdisk /mnt/usbdisk
+    symlink /storage/usbdisk /usbdisk
+    symlink /storage/usbdisk /mnt/usbdisk
 
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
@@ -67,20 +67,12 @@ on emmc-fs
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
-    # Bluetooth Permissions
-    chown bluetooth bluetooth /dev/ttyHS0
-    chmod 0660 /dev/ttyHS0
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
-    setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
-
     # Wifi Firmware
     symlink /system/vendor/firmware/fw_bcmdhd.bin /vendor/firmware/fw_bcmdhd.bin
     symlink /system/vendor/firmware/fw_bcmdhd_apsta.bin /vendor/firmware/fw_bcmdhd_apsta.bin
     symlink /system/vendor/firmware/fw_bcmdhd_p2p.bin /vendor/firmware/fw_bcmdhd_p2p.bin
     symlink /system/vendor/firmware/bcm4329.hcd /vendor/firmware/bcm4329.hcd
+    symlink /system/vendor/firmware/bcm4329.hcd /vendor/firmware/bcm4330.hcd
 
     # TEMP HACK 
     symlink /system/vendor/lib /vendor/lib
@@ -93,6 +85,8 @@ on post-fs-data
     # Set indication that we have finished previous actions
     setprop vold.post_fs_done 1
 
+on boot
+
     wait /dev/ttyHSL1
     mkdir /data/qcks 0770 system system
     exec /system/bin/logwrapper /system/bin/htc_ext4_fsck
@@ -104,26 +98,35 @@ on post-fs-data
     # audio
     mkdir /data/audio 0775 media audio
 
+    # Bluetooth Permissions
+    chown bluetooth bluetooth /dev/ttyHS0
+    chmod 0660 /dev/ttyHS0
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
+    chmod 0660 /sys/class/rfkill/rfkill0/state
+    chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
+    setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
+
     # wifi
     mkdir /data/misc 1771 system misc
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-    #chmod 0660 /data/misc/wifi/wpa_supplicant.conf
+    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     chown dhcp dhcp /data/misc/dhcp
 
     mkdir /data/d 0777 system system
     mount debugfs /data/d /data/d
 
     # allow system to modify ksm control files
-    chown root system /sys/kernel/mm/ksm/pages_to_scan
-    chmod 0664 /sys/kernel/mm/ksm/pages_to_scan
-    chown root system /sys/kernel/mm/ksm/sleep_millisecs
-    chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
-    chown root system /sys/kernel/mm/ksm/run
-    chmod 0664 /sys/kernel/mm/ksm/run
-    write /sys/kernel/mm/ksm/sleep_millisecs 1500
-    write /sys/kernel/mm/ksm/pages_to_scan 256
+   # chown root system /sys/kernel/mm/ksm/pages_to_scan
+   # chmod 0664 /sys/kernel/mm/ksm/pages_to_scan
+   # chown root system /sys/kernel/mm/ksm/sleep_millisecs
+   # chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
+   # chown root system /sys/kernel/mm/ksm/run
+   # chmod 0664 /sys/kernel/mm/ksm/run
+   # write /sys/kernel/mm/ksm/sleep_millisecs 1500
+   # write /sys/kernel/mm/ksm/pages_to_scan 256
 
     # liblights
     chown system system /sys/class/leds/green/brightness
@@ -210,7 +213,7 @@ on post-fs-data
     chown system system /dev/mpuirq
     chown system system /dev/timerirq
 
-    symlink /mnt/sdcard/ext_sd /sdcard1
+    symlink /mnt/sdcard/ext_sd /sdcard2
 
     # Overwrite framework low memory killer setting
     write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
@@ -275,10 +278,10 @@ service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
-service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-    class main
-    disabled
-    oneshot
+#service dhcpcd_p2p /system/bin/dhcpcd -aABKL
+#    class main
+#    disabled
+#    oneshot
 
 service dmagent /system/bin/dmagent -N
     socket dmagent stream 660 root radio
@@ -309,10 +312,10 @@ service iprenew_wlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-service iprenew_p2p /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
+#service iprenew_p2p /system/bin/dhcpcd -n
+#    class main
+#    disabled
+#    oneshot
 
 service kickstart /system/bin/qcks l
     class main
@@ -336,20 +339,20 @@ service mpld /system/bin/mpld
 service netmgrd /system/bin/netmgrd
     class main
 
-service netsharing_on /system/bin/netsharing net on
-    class main
-    disabled
-    oneshot
+#service netsharing_on /system/bin/netsharing net on
+#    class main
+#    disabled
+#    oneshot
 
-service netsharing_off /system/bin/netsharing net off
-    class main
-    disabled
-    oneshot
+#service netsharing_off /system/bin/netsharing net off
+#    class main
+##    disabled
+#    oneshot
 
-service netsharing_pass /system/bin/netsharing net_pass on
-    class main
-    disabled
-    oneshot
+#service netsharing_pass /system/bin/netsharing net_pass on
+#    class main
+#    disabled
+#    oneshot
 
 service qmuxd /system/bin/qmuxd
     class main
@@ -362,7 +365,7 @@ service qmiproxy /system/bin/qmiproxy
     group radio
     disabled
 
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
+service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 NULL NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
     class core
     user root
 
@@ -378,6 +381,13 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/mis
     group wifi inet
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
+service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
+    user root
+    group wifi inet
+    socket wpa_wlan0 dgram 0660 wifi wifi
     disabled
     oneshot
 
