--- a/ramdisk/ueventd.holiday.rc
+++ b/ramdisk/ueventd.holiday.rc
@@ -193,8 +193,8 @@
 /dev/msm_a2dp_in          0640  system       audio
 /dev/msm_amrnb_in         0640  system       audio
 
-/sys/devices/virtual/usb_composite/*   enable      0664  root   system
-/sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
+# wifi
+/dev/rfkill             0660    root        wifi
 
 # permissions for sensors
 /dev/msm_dsps             0660  system       system
